--- a/index.html
+++ b/index.html
@@ -420,12 +420,12 @@ body.dark-theme .hero-content p {
             <div class="skill-card">
                 <i class="fas fa-chart-line"></i>
                 <h3>Entrepreneurship</h3>
-                <p>Pandas & Visualization</p>
+                <p>Entrepreneurship</p>
             </div>
             <div class="skill-card">
                 <i class="fa-solid fa-people-group"></i>
                 <h3>Leaderhip</h3>
-                <p>Advanced Programming</p>
+                <p>LEADERSHIP</p>
             </div>
           
         
@@ -452,7 +452,7 @@ body.dark-theme .hero-content p {
                 <img src="https://via.placeholder.com/350x200" alt="Project Image">
                 <div class="project-card-content">
                     <h3>Project Title</h3>
-                    <p>Project description goes here. It can be short and informative.</p>
+                    <p>project.</p>
                     <a href="#" class="project-btn">View Project</a>
                 </div>
             </div>
@@ -461,7 +461,7 @@ body.dark-theme .hero-content p {
                 <img src="https://via.placeholder.com/350x200" alt="Project Image">
                 <div class="project-card-content">
                     <h3>Project Title</h3>
-                    <p>Project description goes here. It can be short and informative.</p>
+                    <p>Project description</p>
                     <a href="#" class="project-btn">View Project</a>
                 </div>
             </div>
